--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=Adafruit MCP3008
 version=1.0.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
-sentence=
+sentence=MCP3008 8-Channel 10-Bit ADC
 paragraph=MCP3008 8-Channel 10-Bit ADC 
-category=MCP3008 8-Channel 10-Bit ADC
+category=Signal Input/Output
 url=https://www.adafruit.com/product/856
 architectures=*
