--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Adafruit <info@adafruit.com>
 sentence=MCP3008 8-Channel 10-Bit ADC
 paragraph=MCP3008 8-Channel 10-Bit ADC 
 category=Signal Input/Output
-url=https://www.adafruit.com/product/856
+url=https://github.com/adafruit/Adafruit_MCP3008
 architectures=*
