--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
 name=Adafruit MCP3008
-version=1.2.0
+version=1.3.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=MCP3008 8-Channel 10-Bit ADC
-paragraph=MCP3008 8-Channel 10-Bit ADC 
+paragraph=MCP3008 8-Channel 10-Bit ADC
 category=Signal Input/Output
 url=https://github.com/adafruit/Adafruit_MCP3008
 architectures=*
+depends=Adafruit BusIO
